<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adcart"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/productname"
            android:textColor="@color/colorAccent"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/dialog_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/productname" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.design.widget.TextInputEditText
            android:id="@+id/dialog_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Quantity"
            android:text="@string/zero"
            android:inputType="number"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/dialog_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ad"/>

    <Button
        android:id="@+id/dialog_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close"/>

</LinearLayout>