<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a1"
                android:textStyle="bold"
                android:layout_marginLeft="16dp"
                android:textSize="25sp"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/darkGreen">

                <TextView
                    android:id="@+id/p1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a2"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"/>



            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/darkGreen">

                <TextView
                    android:id="@+id/p2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a3"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"/>



            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/darkGreen">

                <TextView
                    android:id="@+id/p3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a4"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"/>



            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/darkGreen">

                <TextView
                    android:id="@+id/p4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a5"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"/>



            </android.support.v7.widget.CardView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/b1"
                android:textStyle="bold"
                android:layout_marginLeft="16dp"
                android:textSize="25sp"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/darkBlue">

                <TextView
                    android:id="@+id/cu1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/b2"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"/>



            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/darkBlue">

                <TextView
                    android:id="@+id/cu2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/b3"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"/>



            </android.support.v7.widget.CardView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/c1"
                android:textStyle="bold"
                android:layout_marginLeft="16dp"
                android:textSize="25sp"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/darkGreen">

                <TextView
                    android:id="@+id/s1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/c2"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"/>



            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/darkGreen">

                <TextView
                    android:id="@+id/s2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/c3"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"/>



            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/darkGreen">

                <TextView
                    android:id="@+id/s3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/c4"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"/>



            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/darkGreen">

                <TextView
                    android:id="@+id/s4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/c5"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"/>



            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:layout_gravity="center"
                android:layout_margin="10dp"/>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>